# duelo

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: formats.md  methodology.md
examples/: README.md  battles.jsonl  generate_battles.py  rank_from_python.py
scripts/: smoke.sh
src/duelo/: __init__.py  __main__.py  bootstrap.py  bradley_terry.py  cli.py  dataset.py  elo.py  errors.py  linalg.py  ranking.py  records.py  report.py
tests/: conftest.py  test_bootstrap.py  test_bradley_terry.py  test_cli.py  test_dataset.py  test_elo.py  test_linalg.py  test_ranking.py  test_records.py  test_report.py
